--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,11 +1,17 @@
 @use 'hero';
+@use 'components/infos-bar';
+@use 'components/buttons';
+@use 'event';
+@use 'variables';
 
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: Roboto, sans-serif;
-    color: #fff;
+    color: variables.$textColor;
+    list-style: none;
+    text-decoration: none;
 }
 
 .container {
